--- a/styles/modules/_mod-col-column.scss
+++ b/styles/modules/_mod-col-column.scss
@@ -11,7 +11,7 @@
     }
 }
 
-.col-item2 {
+.col-column1 {
     h2 {
         @apply xl:mt-6 xl:mb-7 xl:-ml-1 2xl:mt-15 2xl:ml-2 2k:mb-5
     }
@@ -21,7 +21,7 @@
     }
 }
 
-.col-item3 {
+.col-column3 {
     h2 {
         @apply mt-10 xl:mt-2 xl:-ml-3 2xl:mt-9 2xl:-ml-1 2k:mt-8 2k:mb-6
     }
