--- a/styles/modules/_mod-center-button.scss
+++ b/styles/modules/_mod-center-button.scss
@@ -1,4 +1,11 @@
-
+.mod-center-button{
+    .btnslider {
+        @apply w-34 h-39 text-white bg-red;
+        &:hover {
+            @apply bg-darkblue;
+        };
+    }
+}
 .slider-list {
     h6 {
         @apply mt-18;
@@ -6,12 +13,6 @@
 
    
 }  
-.btnslider {
-    @apply w-34 h-39 text-white bg-red;
-    &:hover {
-        @apply bg-darkblue;
-    };
-}
 
 .arrow-append { 
     @apply absolute text-34 -right-17 bottom-29
