--- a/styles/core/lib/_print.scss
+++ b/styles/core/lib/_print.scss
@@ -57,7 +57,7 @@ h6,
 
 .navbar-toggler, 
 ul,
-.mod-banner-home .btn,
+.mod-banner .btn,
 a,
 .img-dot1,
 .img-dot2,
@@ -68,13 +68,13 @@ a,
   display: none;
 }
 
-#header img, .mod-banner-home img{
+#header img, .mod-banner img{
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-.mod-banner-home img {
+.mod-banner img {
   width: 600px;
 }
 
@@ -97,218 +97,10 @@ a,
   }
 }
 
-.mod-multi-comlumn-2 {
+.mod-the-latest {
   margin-top: 100px;
 }
 
 #footer {
   text-align: center;
 }
-
-// #content,
-// #page,
-// body,
-// html,
-// #wrapper,
-// .container,
-// .group-arrows {
-//   width: 100%;
-//   margin: 0;
-//   float: none;
-//   padding: 0;
-//   max-width: none;
-// }
-
-// #banner {
-//   padding-top: 0;
-//   .d-table {
-//     display: block;
-//     height: auto;
-//     h1,
-//     p {
-//       br {
-//         display: none;
-//       }
-//     }
-//   }
-// }
-
-// .col-md-5,
-// .col-md-6,
-// .col-md-9,
-// .col-md-11,
-// .col-5,
-// .col-6,
-// .col-7 {
-//   flex: 0 0 100%;
-//   max-width: 100%;
-//   width: 100%;
-// }
-
-// #header {
-//   position: relative;
-//   text-align: center;
-//   background-color: transparent;
-//   .col-md-2,
-//   .col-md-3,
-//   .col-md-4 {
-//     flex: 0 0 100%;
-//     max-width: 100%;
-//     text-align: center;
-//   }
-//   .logo {
-//     position: relative;
-//     left: 0;
-//     right: 0;
-//     text-align: center;
-//     max-width: 100%;
-//     width: 100%;
-//     a {
-//       max-width: 100%;
-//       width: 100%;
-//       margin: 0 auto;
-//       display: block;
-//       text-align: center;
-//     }
-//     img {
-//       filter: invert(100%);
-//     }
-//   }
-// }
-
-// @page {
-//   margin: 1cm;
-// }
-
-// #main-content {
-//   padding-top: 0;
-// }
-
-// article {
-//   page-break-before: always;
-// }
-
-
-
-// blockquote {
-//   page-break-inside: avoid;
-// }
-
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6,
-// p,
-// li {
-//   page-break-after: avoid;
-//   page-break-inside: avoid;
-//   margin-top: 0;
-//   margin-bottom: 15px;
-// }
-
-// img {
-//   page-break-inside: avoid;
-//   page-break-after: avoid;
-//   max-width: 700px;
-// }
-
-// .d-table {
-//   height: auto;
-// }
-
-// table,
-// pre {
-//   page-break-inside: avoid;
-// }
-
-// ul,
-// ol,
-// dl {
-//   page-break-before: avoid;
-// }
-
-// article a[href^='#']::after {
-//   content: '';
-// }
-
-// .embed-youtube,
-// .embed-responsive {
-//   position: absolute;
-//   height: 0;
-//   overflow: hidden;
-// }
-
-// .btn,
-// .btn-border,
-// .read-more,
-// .mod-form,
-// #header .col-menu,
-// .col-langue {
-//   display: none;
-// }
-
-// address,
-// dt,
-// dd,
-// blockquote {
-//   font-size: 1.2rem;
-// }
-
-// code,
-// pre {
-//   font-family: 'Courier New', Courier, mono, sans-serif;
-// }
-
-// ul,
-// ol {
-//   list-style: square;
-//   margin-left: 18pt;
-//   margin-bottom: 20pt;
-// }
-
-// .slick-list {
-//   .slick-slide {
-//     margin: 0 auto;
-//   }
-// }
-
-// div,
-// section,
-// p,
-// li,
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6 {
-//   opacity: 1;
-//   width: auto;
-//   transform: none;
-//   height: auto;
-//   position: static;
-// }
-
-// .slick-dotted:not(.accordion),
-// .slick-dots,
-// .slick-arrow {
-//   display: none;
-// }
-
-// .navbar-expand-lg,
-// #header-logo .d-lg-none,
-// #footer,
-// .breadcrumb,
-// .form-group,
-// .pagination,
-// .social,
-// #modal,
-// .hamburger-menu,
-// .form-contact, {
-//   display: none;
-// }
-
-
-// ---------------------------------------------------------------------
